style.css
/* ==styles for pomodoro timer== */

:root {
  --main-color: #f05b56;
  --secondary-color: #f26c67;
}

* {
  padding: 0;
  margin: 0;
  transition: all 0.5s ease-in-out;
}

body {
  background: var(--main-color);
  /* overflow: hidden; */
  overflow-x: hidden;
}

main.content {
  max-width: 100%;
  padding: 50px 0;
  box-sizing: border-box;
}

header.main-header > h1 {
  font-family: "Open Sans";
  font-size: 50px;
  color: white;
  text-align: center;
  margin-bottom: 50px;
}

header.main-header > h1 > img {
  width: 50px;
  height: 50px;
}

div.timer {
  width: 60%;
  margin: 0 auto;
}

div.timer > nav.timer-buttons {
  width: 100%;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
}

nav.timer-buttons > button {
  border: none;
  background: transparent;
  outline: none;
  padding: 10px 15px;
  display: inline-block;
  border-radius: 10px;
  color: white;
  font-size: 30px;
  font-family: "Open Sans";
}

nav.timer-buttons > button:hover {
  cursor: pointer;
}

nav.timer-buttons > button.active {
  background: rgba(0, 0, 0, 0.3);
}

div.timer-time {
  margin-top: 100px;
  text-align: center;
  font-size: 200px;
  color: #fff;
  font-family: "Open Sans";
}

button.start {
  padding: 20px 40px;
  padding-right: 30px;
  background: white;
  color: var(--main-color);
  border: none;
  font-size: 30px;
  font-family: "Open Sans";
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 10px;
  display: block;
  margin: 0 auto;
  outline: none;
  border-radius: 20px;
  margin-top: 50px;
}

button.start:hover {
  cursor: pointer;
  border-radius: 0;
}

img.settings-button {
  position: absolute;
  top: 50px;
  left: 50px;
}

img.settings-button:hover {
  cursor: pointer;
}

div.settings {
  background: var(--secondary-color);
  padding: 30px;
  display: inline-block;
  position: absolute;
  top: 300px;
  left: -600px;
}

div.settings > label {
  display: block;
  margin-bottom: 20px;
  font-family: "Open Sans";
  font-size: 20px;
  color: white;
  display: flex;
  align-items: center;
}

div.settings > label > input {
  border: none;
  outline: none;
  padding: 10px;
  margin-right: 20px;
  font-family: "Open Sans";
  font-size: 18px;
  color: var(--secondary-color);
}

button.apply {
  padding: 20px 40px;
  padding-right: 30px;
  background: white;
  color: var(--secondary-color);
  border: none;
  font-size: 30px;
  font-family: "Open Sans";
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 10px;
  display: block;
  margin: 0 auto;
  outline: none;
  border-radius: 20px;
  margin-top: 50px;
}

button.apply:hover {
  cursor: pointer;
  border-radius: 0;
}

@font-face {
  font-family: "Open Sans";
  src: url("fonts/OpenSans-Regular.ttf");
  font-style: normal;
  font-weight: normal;
}

/* tasks */

section.tasks {
  background: var(--secondary-color);
  padding: 30px;
  position: fixed;
  top: 0px;
  right: -500px;
  height: 100%;
  box-sizing: border-box;
  width: 50%;
}

section.tasks > h1 {
  text-align: center;
  font-family: "Open Sans";
  font-size: 50px;
  color: white;
  padding-bottom: 20px;
  border-bottom: 1px solid white;
  margin-bottom: 50px;
}

div.add-task {
  width: 60%;
  margin: 0 auto;
  display: flex;
}

div.add-task > input {
  width: 80%;
  padding: 10px;
  border: none;
  outline: none;
  color: var(--secondary-color);
  font-size: 20px;
  font-family: "Open Sans";
  transition: all 0.5s ease-in-out;
}

div.add-task > input::-webkit-input-placeholder {
  font-size: 20px;
  color: var(--secondary-color);
  opacity: 0.5;
  font-family: "Open Sans";
}

div.add-task > input:hover::-webkit-input-placeholder {
  opacity: 1;
  -webkit-transition: all 0.5s ease-in-out;
}

div.add-task > input:hover::-moz-placeholder {
  opacity: 1;
}

div.add-task > input:hover:-ms-input-placeholder {
  opacity: 1;
}

div.add-task > input:hover::-ms-input-placeholder {
  opacity: 1;
}

div.add-task > input:hover::placeholder {
  opacity: 1;
}

div.add-task > input::-moz-placeholder {
  font-size: 20px;
  color: var(--secondary-color);
  opacity: 0.5;
}

div.add-task > input:-ms-input-placeholder {
  font-size: 20px;
  color: var(--secondary-color);
  opacity: 0.5;
}

div.add-task > input::-ms-input-placeholder {
  font-size: 20px;
  color: var(--secondary-color);
  opacity: 0.5;
}

div.add-task > input::-webkit-input-placeholder {
  font-size: 20px;
  color: var(--secondary-color);
  opacity: 0.5;
}

div.add-task > input::placeholder {
  font-size: 20px;
  color: var(--secondary-color);
  opacity: 0.5;
}

div.add-task > button {
  width: 20%;
  border: none;
  outline: none;
  background: #fff;
  border-left: 1px solid var(--secondary-color);
  color: var(--secondary-color);
  font-size: 20px;
  text-transform: uppercase;
}

div.add-task > button:hover {
  cursor: pointer;
  color: #fff;
  background-color: var(--main-color);
  border-left-color: var(--main-color);
}

img.tasks-button {
  position: absolute;
  top: 50px;
  right: 50px;
  z-index: 20;
  transition: all 0.5s ease-in-out;
}

img.tasks-button:hover {
  cursor: pointer;
}

div.task-item {
  width: 80%;
  padding: 20px;
  background: var(--main-color);
  color: #fff;
  margin: 0 auto;
  margin-bottom: 30px;
  font-family: "Open Sans";
  font-size: 20px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

div.task-item > p {
  max-width: 90%;
  word-wrap: break-word;
}

div.task-item > button {
  height: 35px;
  width: 35px;
  background-color: transparent;
  border: none;
  outline: none;
}

div.task-item > button:hover {
  cursor: pointer;
}

div.tasks-list > div {
  position: relative;
  opacity: 0;
}

div.tasks-list > div.done {
  background: rgba(0, 0, 0, 0.5);
}

div.tasks-list > div.done::before {
  opacity: 1;
}

div.tasks-list > div::before {
  content: "";
  position: absolute;
  top: 50%;
  left: -10%;
  width: 120%;
  height: 1px;
  background: #fff;
  opacity: 0;
  transition: all 0.5s ease-in-out;
}

button.remove-done {
    background: var(--main-color);
    color: white;
    padding: 20px 40px;
    border: none;
    outline: none;
    width: 100%;
    font-family: "Open Sans";
    font-size: 20px;
    margin-top: 40px;
}

button.remove-done:hover {
    background: white;
    color: var(--secondary-color);
    cursor: pointer;
}

/* == MEDIA QUERIES == */

@media (max-width: 1650px) {
    div.settings {
        top: 200px;
    }
    div.settings > label {
        display: flex;
        flex-direction: column;
        border-bottom: 1px solid white;
        padding-bottom: 20px;
    }
    div.settings > label > input {
        margin-bottom: 20px;
    }

    div.add-task {
        width: 100%;
    }

    div.task-item {
        width: 100%;
        box-sizing: border-box;
    }
}

@media (max-width: 1035px) {
    div.timer {
        width: 100%;
        padding: 0 20px;
        box-sizing: border-box;
    }
}

@media (max-width: 730px) {
    img.img-button {
        width: 35px;
        height: 35px;
        top: 25px;
    }
    img.settings-button {
        left: 25px;
    }
    img.tasks-button {
        right: 25px;
    }
    header.main-header {
        margin-top: 50px;
    }
}

@media (max-width: 700px) {
    main.content {
        padding-bottom: 0;
    }

    div.timer-time {
        font-size: 150px;
    }
    header.main-header > h1 {
        font-size: 25px;
        display: flex;
        align-items: center;
        justify-content: space-around;
    }

    section.tasks    {
        width: 100%;
    }

    div.add-task {
        flex-direction: column;
    }
    div.add-task > input {
        width: 100%;
        box-sizing: border-box;
        border: none;
        margin-bottom: 20px;
    }
    div.add-task > button {
        width: 100%;
        box-sizing: border-box;
        border-left: none;
        padding: 10px 40px;
    }
    button.remove-done {
        padding: 10px 0;
    }
    nav.timer-buttons > button {
        font-size: 20px;
    }
}

@media (max-width:  510px) {
    div.timer-time {
        font-size: 100px;
    }
}

@media (max-width: 450px) {
    nav.timer-buttons > button {
        font-size: 15px;
    }
}

